# Airplug-ClearPath

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh
core/: CMakeLists.txt
core/apps/: CMakeLists.txt  construct.sh
core/apps/BAS/: CMakeLists.txt  bas_controller.cpp  bas_controller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
core/apps/NET/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  net_controller.cpp  net_controller.h
core/apps/game/: CMakeLists.txt  agent.cpp  agent.h  agent_controller.cpp  agent_controller.h  bas_controller.cpp  bas_controller.h  board.cpp  board.h  constants.h  main.cpp  player.cpp  player.h  state.cpp  state.h  world.cpp  world.h
core/apps/network_scripts/: clean_processes.sh  complex_network.sh  medium_network.sh  ring.sh  simple_tree.sh  snapshot.txt  two_client.sh
core/extras/: CMakeLists.txt
core/extras/clearpath/: collision_avoidance_manager.cpp  collision_avoidance_manager.h  environment_manager.cpp  environment_manager.h  kd_node.cpp  kd_node.h  kd_tree.cpp  kd_tree.h  line.cpp  line.h  rvo.cpp  rvo.h
core/libapg_qt/: CMakeLists.txt
core/libapg_qt/Clock/: vector_clock.cpp  vector_clock.h
core/libapg_qt/Communication/: broadcast_handler.cpp  broadcast_handler.h  communication_manager.cpp  communication_manager.h  router.cpp  router.h  router_p.cpp  router_p.h  watchdog.cpp  watchdog.h
core/libapg_qt/Controller/: application_controller.cpp  application_controller.h
core/libapg_qt/Election/: election_manager.cpp  election_manager.h
core/libapg_qt/Frame/: aclmessage.cpp  aclmessage.h  header.cpp  header.h  message.cpp  message.h
core/libapg_qt/MutualExclusion/: raymond_lock.cpp  raymond_lock.h  ricart_lock.cpp  ricart_lock.h
core/libapg_qt/OptionParser/: option_parser.cpp  option_parser.h
core/libapg_qt/Snapshot/: laiyang_snapshot.cpp  laiyang_snapshot.h
core/libapg_qt/Synchronizer/: synchronizer.cpp  synchronizer.h  synchronizer_base.cpp  synchronizer_base.h  synchronizer_control.cpp  synchronizer_control.h
core/libapg_qt/Transporters/: message_transporter.cpp  message_transporter.h  std_transporter.cpp  std_transporter.h  udp_transporter.cpp  udp_transporter.h
libapg_qt/: libapg_qt.pro  main.cpp
libapg_qt/src/Communication/: communication_manager.cpp  communication_manager.h
libapg_qt/src/Frame/: header.cpp  header.h  message.cpp  message.h
libapg_qt/src/Transporters/: std_transporter.cpp  std_transporter.h  udp_transporter.cpp  udp_transporter.h
tools/: CMakeLists.txt  scenario_block.cpp  test_clock.cpp  test_kdtree.cpp  test_message.cpp
uml/: airplug.puml
uml/extras/clearpath/: CollisionAvoidanceManager.iuml  EnvironmentManager.iuml  KD.iuml  RVO.iuml  clearpath.puml
uml/libapgqt/: Clock.iuml  Communication.iuml  Controller.iuml  Election.iuml  Frame.iuml  MutualExclusion.iuml  OptionParser.iuml  Snapshot.iuml  Transporters.iuml  libapgqt.puml
